tests/errors/tc_expr_addr_call.lx
@module "main"

const foo -> fn () void {}

pub const main -> fn () int {
    let p: *void = &foo();
    return 0;
}
